--- a/starter/app/src/main/res/layout/fragment_instructions.xml
+++ b/starter/app/src/main/res/layout/fragment_instructions.xml
@@ -10,7 +10,7 @@
         </data>
 
 
-<androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
@@ -58,9 +58,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/btnArrow"
-            android:background="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@color/transparent"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/arrow_right"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
