--- a/starter/app/src/main/res/layout/fragment_instructions.xml
+++ b/starter/app/src/main/res/layout/fragment_instructions.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<!--layout xml tag is used for data binding purpose-->
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -9,7 +9,11 @@
                     type="com.udacity.shoestore.viewmodels.SharedViewModel" />
         </data>
 
-
+        <!-- I used ConstraintLayout to encapsulate
+                    and include other views inside it
+                    Constraint layout is more efficient than
+                     LinearLayout or Relative Layout as
+                     it does not allow nested View Groups -->
         <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
