--- a/starter/app/src/main/res/layout-w600dp/fragment_detail.xml
+++ b/starter/app/src/main/res/layout-w600dp/fragment_detail.xml
@@ -1,7 +1,9 @@
+<!--layout xml tag is used for data binding purpose-->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
+        <import type="com.udacity.shoestore.utils.IntConverter"/>
         <variable
             name="MyShoe"
             type="com.udacity.shoestore.models.Shoe" />
@@ -10,9 +12,16 @@
             type="com.udacity.shoestore.viewmodels.SharedViewModel" />
     </data>
 
+    <!-- I used ScrollView to enable displaying hidden views
+        ScrollView enable to scroll the hidden views and display it-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <!-- I used ConstraintLayout to encapsulate
+                and include other views inside it
+                Constraint layout is more efficient than
+                 LinearLayout or Relative Layout as
+                 it does not allow nested View Groups -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -65,7 +74,7 @@
                 android:ems="10"
                 android:hint="@string/size"
                 android:inputType="number|textPersonName|numberDecimal"
-                android:text="@{String.valueOf(MyShoe.size)}"
+                android:text="@={IntConverter.convertDoubleToString(MyShoe.size)}"
                 app:layout_constraintBottom_toTopOf="@+id/etShoeCompany"
                 app:layout_constraintEnd_toEndOf="@+id/etShoeName"
                 app:layout_constraintStart_toStartOf="@+id/etShoeName"
@@ -79,7 +88,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="24dp"
-                android:text="@{MyShoe.name}"
+                android:text="@={MyShoe.name}"
                 android:ems="10"
                 android:hint="@string/name"
                 android:inputType="textPersonName"
@@ -95,10 +104,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:text="@{MyShoe.company}"
+                android:text="@={MyShoe.company}"
                 android:hint="@string/company"
                 android:inputType="textPersonName"
-
                 app:layout_constraintBottom_toTopOf="@+id/etShoeDesc"
                 app:layout_constraintEnd_toEndOf="@+id/etShoeSize"
                 app:layout_constraintStart_toStartOf="@+id/etShoeSize"
@@ -112,7 +120,7 @@
                 android:hint="@string/Description"
                 android:textColor="@color/colorAccent"
                 android:inputType="textPersonName"
-                android:text="@{MyShoe.description}"
+                android:text="@={MyShoe.description}"
                 app:layout_constraintBottom_toTopOf="@+id/guideline3"
                 app:layout_constraintEnd_toEndOf="@+id/etShoeCompany"
                 app:layout_constraintStart_toStartOf="@+id/etShoeCompany"
