--- a/starter/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_list.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--layout xml tag is used for data binding purpose-->
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -8,10 +9,19 @@
             type="com.udacity.shoestore.viewmodels.SharedViewModel" />
     </data>
 
+    <!-- I used ConstraintLayout to encapsulate
+            and include other views inside it
+            Constraint layout is more efficient than
+             LinearLayout or Relative Layout as
+             it does not allow nested View Groups -->
     <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
         android:padding="10dp">
+        <!-- I used ScrollView to enable displaying hidden views
+        ScrollView enable to scroll the hidden views and display it
+        Here, it also might work like a listview
+        in case that the list item increased than the screen height-->
         <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
@@ -20,7 +30,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
-        <LinearLayout
+           <LinearLayout
             android:layout_margin="10dp"
             android:padding="10dp"
             android:id="@+id/MyLinearLayoutList"
