--- a/starter/app/src/main/res/layout/fragment_welcome.xml
+++ b/starter/app/src/main/res/layout/fragment_welcome.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--layout xml tag is used for data binding purpose-->
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -7,7 +8,11 @@
             name="LoginViewModel"
             type="com.udacity.shoestore.viewmodels.SharedViewModel" />
     </data>
-
+    <!-- I used ConstraintLayout to encapsulate
+                and include other views inside it
+                Constraint layout is more efficient than
+                 LinearLayout or Relative Layout as
+                 it does not allow nested View Groups -->
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
