--- a/starter/app/src/main/res/layout/shoe_list_item.xml
+++ b/starter/app/src/main/res/layout/shoe_list_item.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--layout xml tag is used for data binding purpose-->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -9,13 +10,17 @@
             type="com.udacity.shoestore.models.Shoe" />
 
     </data>
-
+    <!-- CardView is used to set the view like a card and contain other child views-->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:elevation="5dp"
         app:cardCornerRadius="5dp">
+<!--        We used Linear layout as we are not going to use
+            too many views,
+             there will not be nested views
+             in this layout inside this LinearLayout-->
 
         <LinearLayout
             android:layout_width="match_parent"
